[gd_scene load_steps=9 format=3 uid="uid://cjmkfiguhiqs0"]

[ext_resource type="Script" path="res://Scenes/World/world.gd" id="1_7qcyd"]
[ext_resource type="PackedScene" uid="uid://cp1taopkiaubn" path="res://Scenes/Player/mmx.tscn" id="1_ou0ht"]
[ext_resource type="PackedScene" uid="uid://c78fr5dvp0rad" path="res://OtherScenes/health_meter.tscn" id="2_ou68e"]
[ext_resource type="PackedScene" uid="uid://b4jtd8kp38ms7" path="res://Scenes/Enemies/met_tool.tscn" id="4_e4k12"]
[ext_resource type="PackedScene" uid="uid://c561lcps561ki" path="res://Scenes/Enemies/missile_launcher.tscn" id="5_nm0hc"]
[ext_resource type="PackedScene" uid="uid://dyd3durfq21qr" path="res://Scenes/World/stage_level.tscn" id="6_hkh66"]

[sub_resource type="LabelSettings" id="LabelSettings_o448h"]
font_size = 5

[sub_resource type="LabelSettings" id="LabelSettings_wawkd"]
font_size = 5

[node name="World" type="Node2D"]
script = ExtResource("1_7qcyd")

[node name="MMX" parent="." instance=ExtResource("1_ou0ht")]
position = Vector2(103, -16)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthMeter" parent="CanvasLayer" instance=ExtResource("2_ou68e")]
offset_left = 8.0
offset_top = 8.0
offset_right = 8.0
offset_bottom = 8.0

[node name="Labels" type="Node2D" parent="CanvasLayer"]
position = Vector2(0, -10)

[node name="Label" type="Label" parent="CanvasLayer/Labels"]
offset_left = 2.0
offset_top = 153.0
offset_right = 54.0
offset_bottom = 172.0
text = "Test"
label_settings = SubResource("LabelSettings_o448h")

[node name="Label6" type="Label" parent="CanvasLayer/Labels"]
offset_left = 2.0
offset_top = 146.0
offset_right = 54.0
offset_bottom = 165.0
text = "Test"
label_settings = SubResource("LabelSettings_o448h")

[node name="Label2" type="Label" parent="CanvasLayer/Labels"]
offset_left = 2.0
offset_top = 161.0
offset_right = 54.0
offset_bottom = 180.0
text = "Test"
label_settings = SubResource("LabelSettings_o448h")

[node name="Label3" type="Label" parent="CanvasLayer/Labels"]
offset_left = 2.0
offset_top = 168.0
offset_right = 42.0
offset_bottom = 184.0
text = "Test"
label_settings = SubResource("LabelSettings_wawkd")

[node name="Label4" type="Label" parent="CanvasLayer/Labels"]
offset_left = 2.0
offset_top = 176.0
offset_right = 42.0
offset_bottom = 192.0
text = "Test"
label_settings = SubResource("LabelSettings_wawkd")

[node name="Label5" type="Label" parent="CanvasLayer/Labels"]
offset_left = 2.0
offset_top = 183.0
offset_right = 42.0
offset_bottom = 199.0
text = "Test"
label_settings = SubResource("LabelSettings_wawkd")

[node name="Label7" type="Label" parent="CanvasLayer/Labels"]
offset_left = 2.0
offset_top = 139.0
offset_right = 42.0
offset_bottom = 155.0
text = "Test"
label_settings = SubResource("LabelSettings_wawkd")

[node name="Met_Tool" parent="." instance=ExtResource("4_e4k12")]
position = Vector2(762, 144)
area_size = 75.0

[node name="MissileLauncher2" parent="." instance=ExtResource("5_nm0hc")]
position = Vector2(924, 104)
facing_direction = -1
detection_range = 100

[node name="StageLevel" parent="." instance=ExtResource("6_hkh66")]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(643, -34, 643, 115, 723, 115, 723, -35)
